--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@portabletext/react": "^2.0.2",
     "@sanity/image-url": "^1.0.2",
     "@types/node": "18.15.11",
@@ -22,6 +23,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "sanity": "^3.8.3",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
